# meta-attn-public

./: .env.example  .gitignore  README.md  pyproject.toml
mattn/: __init__.py  document.py  embedding.py  input_pair.py  prompting.py  query.py  query_generator.py  relevance.py  train.py  utils.py
notebooks/: experiments.ipynb  results.ipynb
scripts/: download_wikipedia_articles.py  embed_documents.py  generate_inputs.py  generate_queries.py  run_input_pipeline.sh
